--- a/trend.html
+++ b/trend.html
@@ -124,12 +124,12 @@
       var originByVal;
 
       // Scene navigation logic
-      var currentPage1 = "chart3.html";
-      var nextPage1 = "chart3.html";
-      var previousPage1 = "chart2.html";
-      var summaryPage1 = "chart1.html";
-      var jobsbyPage1 = "chart2.html";
-      var jobsdetailPage1= "chart3.html";
+      var currentPage1 = "trend.html";
+      var nextPage1 = "trend.html";
+      var previousPage1 = "category.html";
+      var summaryPage1 = "volume.html";
+      var jobsbyPage1 = "category.html";
+      var jobsdetailPage1= "trend.html";
 
       function navigate(action) {
         if (action == "next") {
