--- a/chart3.html
+++ b/chart3.html
@@ -3,7 +3,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <head>
     <meta charset="UTF-8" />
-    <title>Narrative-viz by das25</title>
+    <title>Video Streaming Insights</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link href="css/foundation.css" type="text/css" rel="stylesheet" media="screen" />
@@ -56,13 +56,17 @@
       <div class="row"> 
           <div class="large-4 medium-12 column"> 
               <div class="logoholder">
-                  <a href="#home" class="scroll"><img src="images/uiuc.jpeg" alt="" title="" width="70" height="50"></a>
+                  <a href="#home" class="scroll"><img src="images/uiuc.jpeg" alt="" title="" width="80" height="50"></a>
               </div>
+            </br>
+            <div class="logoholder">
+              Video Streaming Insights 
+          </div>
           </div>
           <div class="large-8 medium-12 column">
               <nav> 
                   <ul> 
-                      <li><a href="#" onclick="navigate('category');" class="scroll">Content Volume</a></li>
+                      <li><a href="#" onclick="navigate('volume');" class="scroll">Content Volume</a></li>
                       <li>|</li>
                       <li><a href="#" onclick="navigate('category');" class="scroll">Content Category</a></li>
                       <li>|</li>
@@ -78,24 +82,23 @@
       </div>
   </header>
     <section class="main-content">
-      <h3>
-        <span aria-hidden="true" class="octicon octicon-link"></span>Genres by Directors
-      </h3>
-      <footer class="site-footer">
-        <div class="tooltip2">
-        <span class="site-footer-credits">
-          You may click to interactively view corresponding data on the charts.
-        </span>
+      <div class="large-4 hide-for-medium-only hide-for-small-only column start" id = "imageclass"> 
+        <div class="imageholder">
+            <img src="images/stream.jpeg" alt="Streaming" title="Stream Wars">
         </div>
-      </footer>
-      <div class="tooltip1">
-        This chart shows genres by male/females. By <mark class="teal">default</mark> shows 
-        <mark class="teal">All Jobs</mark> by employers belonging to different <mark class="teal">sectors</mark>.
-        Chart is in descending order with the Company Names having most number of jobs showing first.
-        Many companies are there belonging to different company types and hence pagination provided.</br>
-        Any selection of an <mark class="teal">Employer Type</mark> and <mark class="teal">value</mark> from the previous page will set the chart accordingly.</br>
-        Chart can be viewed interactively by selecting/deselecting the <mark class="teal">Job Titles</mark> on the top right corner.
+    </div>
+    <br>
+      <h3>
+        <span aria-hidden="true" class="octicon octicon-link"></span> Which streaming service is uniquely positioned in terms of content availability and variety ?
+      </h3>
+      <div class="tooltip1" id = "textbody">
+        This chart shows content volume for each video streaming provider in the last 10 years . By <mark class="green" id = "bluetext">default</mark> shows 
+        <mark class="green" id = "bluetext">All Movies</mark> released by streaming services belonging to different <mark class="green" id = "bluetext">Genres</mark>.
+        Chart is in descending order with year value. 
+        Prior years can be viewed by clicking on the prior button.</br>
+        
 	      </br>
+	    Based on user preferences set for  <mark class="green" id = "bluetext">Content Category</mark> and <mark class="green" id = "bluetext">Streaming Service</mark>, content availability will be displayed in below chart accordingly.
       </p>
         <div id="selectchoice">
           <div id="selectdiv"></div>
@@ -104,12 +107,19 @@
           <label id="chartlabel" for="chartlabel"></label>
         </div>
          <div id="pagination">
-          <input type="button" id="first" onclick="firstPage()" value="first" />
-          <input type="button" id="next" onclick="nextPage()" value="next" />
+          <input type="button" id="first" onclick="firstPage()" value="latest" />
+          <input type="button" id="next" onclick="nextPage()" value="prior" />
           <label id="paginationlabel" for="paginationlabel"></label>
         </div>        
         <svg id="chart" width="960" height="500"></svg>        
       </div>
+      <footer class="site-footer">
+        <div class="tooltip2">
+          <span class="site-footer-credits">
+             Chart can be viewed interactively by selecting/deselecting the <mark class="green" id = "bluetext">Streaming Services</mark> on the top right corner. You may click on the Content Volume or Content Category on the menu bar to navigate and view author set charts. 
+          </span>
+          </div>
+      </footer>
     </section>
 
     <script>
@@ -127,21 +137,21 @@
       var currentPage1 = "chart3.html";
       var nextPage1 = "chart3.html";
       var previousPage1 = "chart2.html";
-      var categoryPage1 = "chart1.html";
-      var jobsbyPage1 = "chart2.html";
-      var jobsdetailPage1= "chart3.html";
+      var volumePage1 = "chart1.html";
+      var categoryPage1 = "chart2.html";
+      var trendPage1= "chart3.html";
 
       function navigate(action) {
         if (action == "next") {
           dest = nextPage1;
         } else if (action == "previous") {
           dest = previousPage1;
-        } else if (action == "summary") {
-          dest = summaryPage1;
+        } else if (action == "volume") {
+          dest = volumePage1;
         } else if (action == "category") {
-          dest = jobsbyPage1;
+          dest = categoryPage1;
         } else if (action == "trend") {
-          dest = jobsdetailPage1;
+          dest = trendPage1;
         } else dest = "#";
         window.location = dest;
       }
@@ -266,9 +276,9 @@ filedata = filedata.filter(function(d){return d.IMDb >= 7 && (d.Year >= 2010 && 
         //Before drawing chart set everything to blank
         var originbyval1 = (originbyval !== "")? originbyval : "All";
         document.getElementById("chartlabel").innerHTML = "<mark class='green'> Chart: </mark>" + 
-          "Showing distribution for <mark class='teal'>" + origin + "</mark> by Employer " + 
-          "<mark class='teal'>" + originby + "</mark> - " + "<mark class='green'>" + originbyval1 + "</mark>." +
-          " Starting with Companies having more number of jobs." + "</br></br>";
+          "Showing distribution for <mark class='teal'>" + origin + "</mark> by Content Category " + 
+          "<mark class='teal'>" + originby + "</mark> - " + "<mark class='green'>" + originbyval1 + "</mark>" +
+          " starting with current year." + "</br></br>";
 
         initializeChartData(); //initializes list with data for the next loadList call
         loadList();
@@ -415,7 +425,7 @@ filedata = filedata.filter(function(d){return d.IMDb >= 7 && (d.Year >= 2010 && 
 
         z = d3.scaleOrdinal()
         //.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);        
-        .range(["#E50914", "#00A8E1", "#66aa33", "#006e99"]);        
+        .range(["#DC0012", "#159CDC", "#28F678", "#09476C"]);        
 
         //var keys = data.columns.slice(1);
         //var keys = ['data_engineer' ,'senior_data_engineer', 'software_engineer', 'bigdata_engineer', 'sr_data_engineer', 'others', 'totaljobcount'];
@@ -484,7 +494,7 @@ filedata = filedata.filter(function(d){return d.IMDb >= 7 && (d.Year >= 2010 && 
             .attr("fill", "#000")
             //.attr("font-weight", "bold")
             .attr("text-anchor", "start")
-            .text("No. Of Jobs");
+            .text("No. Of Movies");
 
         var legend = g.append("g")
             .attr("font-family", "sans-serif")
